examples/test/testpolicy2884.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2884
  namespace: namespace276
spec:
  podSelector:
    matchLabels:
      key29: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value44
          key32: value10
          key27: value39
      podSelector:
        matchLabels:
          key23: value39
          key20: value49
          key22: value27
